2021-05-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 48767: Doc/Zsh/params.yo: docs: $SECONDS: Clarify what types
	may be set

2021-04-28  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 48702: Completion/Unix/Command/_pandoc: do not use cache,
	support two or more extensions of format, and other fixes

2021-04-21  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 48606 + 48607 + unposted test: Functions/Math/zmathfunc,
	Test/Z02zmathfunc.ztst: zmathfunc: Force arguments to be numbers
	and catch errors.

	* unposted (cf. 48156): Test/Z02zmathfunc.ztst: New test.

	* users/26635 (tweaked):
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg: vcs_info hg:
	Compute the branch name correctly when get-revision is set and
	check-for-changes is not

2021-04-20  Bart Schaefer  <schaefer@zsh.org>

	* 48638: NEWS: mention TYPESET_TO_UNSET

2021-04-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 48435 (tweaked): Doc/Zsh/contrib.yo, Misc/vcs_info-examples:
	vcs_info docs: applied-string/unapplied-string: Correct an
	omission in the documentation and add an example.

	* 48528/0002: Misc/vcs_info-examples: vcs_info git docs:
	ahead/behind commits: Reduce the number of forks

	* 48528/0001: Misc/vcs_info-examples: vcs_info git docs:
	ahead/behind commits: Don't run rev-list when that would fail

2021-04-19  Bart Schaefer  <schaefer@zsh.org>

	* 48617: Completion/Base/Widget/_complete_debug: fix misuse of
	IGNORE_BRACES when initializing debug_indent

	* 47489: Functions/Misc/colors: rename standout as italic

2021-04-19  Oliver Kiddle  <opk@zsh.org>

	* Marlon Richert: 48621: Completion/Zsh/Function/_add-zsh-hook,
	Completion/Zsh/Function/_add-zle-hook-widget: Add -L to
	add-(zsh|zle)-hook[-widget] completion

	* André Kugland: github/zsh-completions #792:
	Completion/Unix/Command/_opustools: new opus-tools completion

	* 48619: Completion/Unix/Command/_ansible: complete inventory
	plugins in assignments to ANSIBLE_INVENTORY_ENABLED

	* 48618: Completion/Unix/Command/_date,